= CHANGES

== 0.9.5 (Unreleased)

* Now we use Sinatra 0.9.6 since previous versions on ruby >= 1.8.7-p248 raise a segfault bug
* Refactored executables
* Added strip_tags helper
* Fixed model_attribute_translate helper
* Added favicon
* Prevent bundler gem clashing
* Fixed minor SASS support issue for haml generated projects

== 0.9.4

* Improved select_tag helper, now accept :include_blank => 'My text' 
* Re-require 'tilt' since not all of us use sinatra --pre
* Fixed a strange api change of bundler (see: http://github.com/carlhuda/bundler/issues/closed#issue/160)
* Removed Bundler 0.9.7 dependency and allow all versions > 0.9.7.
* Fixed Padrino Mailer views_path when we use a "multi app" project
* Fixed content_type in Padrino Mailer
* Added a spec option -fs 
* Removed rspec.opts and use it directly in rake task.

== 0.9.3

* Fixed a problem with some env with generators

== 0.9.2

* Fixed overwrite of :+name+ in f.check_box and f.radio_button
* Added +highlight+ helper
* Cleaned up (truncated) README files for Padrino gems
* Added template agnosticism (erb/haml) in admin generator
* Added +mootools+ as a javascript option in project generator 
* Added +cucumber+ as a test option in project generator
* Added +Mongoid+ as adapter in admin generator
* Added +Mongoid+ as an orm option in project generator
* Added +MongoMapper+ as adapter in admin generator
* Fixed an issue with the SASS initializer for project generator
* Fixed a small problem with DataMapper and our error helpers
* Removed admin flash middleware (extracted to extension)
* Minor code cleanup

== 0.9.1

* New Padrino Admin with static theme based on web-app-theme
* Fix routing module to work for sinatra standalone 
* Fix rendering module to work for sinatra standalone 
* Added +favicon_tag+ helper 
* Refactored Internals of +Padrino+::+Application+
* Added I18n helpers +t+ and +l+
* Added a new helper +error_message_on+
* Added a new helper +button_to+