@@ -2,6 +2,8 @@
 
 == 0.9.5 (Unreleased)
 
+* Fixed compatibility with ERB and Sinatra 1.0
+* Fixed an issues with index and ar:auto:upgrade
 * Now we use Sinatra 0.9.6 since previous versions on ruby >= 1.8.7-p248 raise a segfault bug
 * Refactored executables
 * Added strip_tags helper
